Thu Jun 20 00:05:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTED): fix type.

Wed Jun 19 23:39:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_test): rewrite checking code.
	  When RGENGC_CHECK_MODE >= 2, all minor marking, run normal minor
	  marking *and* major/full marking. After that, compare the results
	  and shows BUG if a object living with major/full marking but dead
	  with minor marking.
	  After detecting bugs, print references information.
	  (RGENGC_CHECK_MODE == 2, show references to dead object)
	  (RGENGC_CHECK_MODE == 3, show all references)

Wed Jun 19 23:51:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigfixize): Use rb_absint_size.
	  (check_shiftdown): Ditto.
	  (big2ulong): Use bdigit_roomof.

Wed Jun 19 23:32:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTED): check consistency between oldgen flag and
	  oldgen bitmap if RGENGC_CHECK_MODE > 0.

Wed Jun 19 23:29:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_force_recycle): clear oldgen bitmap, too.

Wed Jun 19 21:02:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_uint2big): Consider environments BDIGIT is bigger than
	  long.
	  (big2ulong): Ditto.
	  (rb_big_aref): Ditto.
	  (rb_big_pack): Just call rb_integer_pack.
	  (rb_big_unpack): Just call rb_integer_unpack.

Wed Jun 19 20:51:21 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gc.c (gc_stress_get): GC.stress can be Fixnum.

Wed Jun 19 19:31:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (DIGSPERLONG): Don't define if BDIGIT is bigger than long.
	  (DIGSPERLL): Don't define if BDIGIT is bigger than LONG_LONG
	  (rb_absint_size): Consider environments BDIGIT is bigger than long.
	  Use BIGLO and BIGDN.
	  (rb_absint_singlebit_p): Ditto.
	  (rb_integer_pack): Ditto.
	  (bigsub_int): Consider environments BDIGIT is bigger than long.
	  Use SIZEOF_BDIGITS instead of sizeof(BDIGIT).
	  (bigadd_int): Ditto.
	  (bigand_int): Ditto.
	  (bigor_int): Ditto.