@@ -1,3 +1,10 @@
+Thu Jun 20 01:07:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* gc.c (MARKED_IN_BITMAP, FL_TEST2): return boolean value since always
+	  used as boolean value.
+
+	* gc.c (MARK_IN_BITMAP, CLEAR_IN_BITMAP): evaluate bits once.
+
 Thu Jun 20 00:05:07 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (RVALUE_PROMOTED): fix type.
